Se suben mas clases al repositorio

--- a/Modulo-Typescript/package.json
+++ b/Modulo-Typescript/package.json
@@ -9,9 +9,18 @@
     "clase2": "ts-node ejercicios-clase-2.ts",
     "clase3": "ts-node ejercicios-clase-3.ts",
     "clase4": "ts-node ejercicios-clase-4.ts",
-    "ejercicio-propuesto": "ts-node ejercicios-propuestos-1.ts",
+    "clase5": "ts-node ejercicios-clase-5.ts",
+    "clase6": "ts-node ejercicios-clase-6.ts",
+    "clase7": "ts-node ejercicios-clase-7.ts",
+    "ejercicios-propuestos-1": "ts-node ejercicios-propuestos-1.ts",
+    "ejercicios-propuestos-2": "ts-node ejercicios-propuestos-2.ts",
+    "ejercicios-propuestos-3": "ts-node ejercicios-propuestos-3.ts",
+    "ejercicios-propuestos-4": "ts-node ejercicios-propuestos-4.ts",
     "testing": "ts-node testing.ts",
     "prepara-lab1": "ts-node guia-preparacion-lab1.ts",
+    "prepara-lab2": "ts-node guia-preparacion-lab2.ts",
+    "lab1": "ts-node laboratorio-1.ts",
+    "funciones": "ts-node funciones.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
